- many error message improvements/UX optimizations   (coordinates corrected/added/removed, printing of entities only if not anonymous, user friendlier type names, added printing of entity kinds, made descriptions more precise, spelling/grammar improvements/corrections, error message uniformization) - carried out a few bugfixes (e.g. untyped operator type balancing and evaluation) and a few refactorings - adapted tests, esp. adapted frontend should-fail tests to the changes in the meantime   (i.e. new keywords/operators, literal suffixes, implicit conversion to string, --- separator introduction, mandatory braces for container constructors, :: prefix for global variables, pattern block removal, package prefixes for previously global functions, object prefixes for string methods turned into methods, connection assertion syntax changes) - added new should-fail tests (closing holes in test coverage)